# buildgen

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml
src/buildgen/: __init__.py  __main__.py  cli.py  recipes.py
src/buildgen/_mako/: _ast_util.py  ast.py  cache.py  codegen.py  exceptions.py  filters.py  lexer.py  lookup.py  parsetree.py  pygen.py  pyparser.py  runtime.py  template.py  util.py
src/buildgen/cli/: __init__.py  commands.py  main.py  parsers.py
src/buildgen/cmake/: __init__.py  builder.py  cli.py  functions.py  generator.py  project_generator.py  variables.py
src/buildgen/common/: __init__.py  base.py  config.py  platform.py  project.py  utils.py
src/buildgen/makefile/: __init__.py  builder.py  cli.py  functions.py  generator.py  variables.py
src/buildgen/skbuild/: __init__.py  generator.py  templates.py
src/buildgen/templates/: __init__.py  resolver.py
src/buildgen/templates/c/app-with-lib/: CMakeLists.txt.mako
src/buildgen/templates/c/executable/: CMakeLists.txt.mako
src/buildgen/templates/c/executable/src/: main.c.mako
src/buildgen/templates/c/full/: CMakeLists.txt.mako
src/buildgen/templates/c/full/src/: main.c.mako
src/buildgen/templates/c/full/tests/: test_main.c.mako
src/buildgen/templates/c/header-only/: CMakeLists.txt.mako
src/buildgen/templates/c/library-with-tests/: CMakeLists.txt.mako
src/buildgen/templates/c/shared/: CMakeLists.txt.mako
src/buildgen/templates/c/static/: CMakeLists.txt.mako
src/buildgen/templates/c/static/src/: lib.c.mako
src/buildgen/templates/common/: CHANGELOG.md.mako  LICENSE.mako  Makefile.cmake.mako  Makefile.uv.mako  Makefile.venv.mako  gitignore.cmake.mako  gitignore.python.mako
src/buildgen/templates/common/github-workflows/: build-publish.yml.mako  ci.yml.mako
src/buildgen/templates/cpp/app-with-lib/: CMakeLists.txt.mako
src/buildgen/templates/cpp/executable/: CMakeLists.txt.mako
src/buildgen/templates/cpp/executable/src/: main.cpp.mako
src/buildgen/templates/cpp/full/: CMakeLists.txt.mako
src/buildgen/templates/cpp/full/src/: main.cpp.mako
src/buildgen/templates/cpp/header-only/: CMakeLists.txt.mako
src/buildgen/templates/cpp/library-with-tests/: CMakeLists.txt.mako
src/buildgen/templates/cpp/library-with-tests/tests/: test_main.cpp.mako
src/buildgen/templates/cpp/shared/: CMakeLists.txt.mako
src/buildgen/templates/cpp/static/: CMakeLists.txt.mako
src/buildgen/templates/cpp/static/src/: lib.cpp.mako
src/buildgen/templates/py/cext/: CMakeLists.txt.mako  README.md.mako  pyproject.toml.mako
src/buildgen/templates/py/cext/src/: __init__.py.mako  _core.c.mako
src/buildgen/templates/py/cext/tests/: test.py.mako
src/buildgen/templates/py/common/: pyproject.base.toml.mako
src/buildgen/templates/py/cython/: CMakeLists.txt.mako  README.md.mako  pyproject.toml.mako
src/buildgen/templates/py/cython/src/: __init__.py.mako  _core.pyx.mako
src/buildgen/templates/py/cython/tests/: test.py.mako
src/buildgen/templates/py/nanobind/: CMakeLists.txt.mako  README.md.mako  pyproject.toml.mako
src/buildgen/templates/py/nanobind/src/: __init__.py.mako  _core.cpp.mako
src/buildgen/templates/py/nanobind/tests/: test.py.mako
src/buildgen/templates/py/pybind11/: CMakeLists.txt.mako  README.md.mako  pyproject.toml.mako
src/buildgen/templates/py/pybind11-flex/: CMakeLists.txt.mako  README.md.mako  project.flex.json.mako  pyproject.toml.mako
src/buildgen/templates/py/pybind11-flex/src/: __init__.py.mako  _core.cpp.mako
src/buildgen/templates/py/pybind11-flex/tests/: test.py.mako
src/buildgen/templates/py/pybind11/src/: __init__.py.mako
src/buildgen/templates/py/pybind11/tests/: test.py.mako
tests/: conftest.py  test_cli.py  test_cmake.py  test_config.py  test_generation_output.py  test_makefilegen.py  test_project.py  test_recipe_projects.py  test_skbuild.py  test_templates.py  test_unique_list.py
(+7 files in other folders)
