[project]
name = "buildgen"
version = "0.1.4"
description = "Build system generator - Makefile, CMake, and more."
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "me@example.org" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = []
keywords = [
    "makefile",
    "cmake",
    "build-system",
    "code-generation",
    "cpp",
    "c++",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/shakfu/buildgen"
Repository = "https://github.com/shakfu/buildgen"
Issues = "https://github.com/shakfu/buildgen/issues"
Changelog = "https://github.com/shakfu/buildgen/blob/main/CHANGELOG.md"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
buildgen = "buildgen.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "twine>=6.2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
