[project]
name = "buildgen"
version = "0.1.7"
description = "Build system generator - Makefile, CMake, scikit-build-core and more."
readme = "README.md"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "mako>=1.3.10",
    "pyyaml>=6.0.3",
]
keywords = [
    "makefile",
    "cmake",
    "build-system",
    "code-generation",
    "cpp",
    "c++",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/shakfu/buildgen"
Repository = "https://github.com/shakfu/buildgen"
Issues = "https://github.com/shakfu/buildgen/issues"
Changelog = "https://github.com/shakfu/buildgen/blob/main/CHANGELOG.md"

[project.scripts]
buildgen = "buildgen.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "hypothesis>=6.135.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "twine>=6.2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
disable_error_code = ["import-untyped"]
ignore_missing_imports = true


